// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar Component should render with props passed in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchBar
    loadAllData={[Function]}
    searchTerm="cat"
    setSearchTerm={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="search-form"
        onSubmit={[Function]}
>
        <input
                id="input-bar"
                onChange={[Function]}
                placeholder="Search your youtube videos here"
                type="text"
        />
        <button
                className="search-button"
        >
                Search
        </button>
</form>,
      "id": "search-bar",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            id="input-bar"
            onChange={[Function]}
            placeholder="Search your youtube videos here"
            type="text"
/>,
          <button
            className="search-button"
>
            Search
</button>,
        ],
        "className": "search-form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "id": "input-bar",
            "onChange": [Function],
            "placeholder": "Search your youtube videos here",
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Search",
            "className": "search-button",
          },
          "ref": null,
          "rendered": "Search",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="search-form"
          onSubmit={[Function]}
>
          <input
                    id="input-bar"
                    onChange={[Function]}
                    placeholder="Search your youtube videos here"
                    type="text"
          />
          <button
                    className="search-button"
          >
                    Search
          </button>
</form>,
        "id": "search-bar",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              id="input-bar"
              onChange={[Function]}
              placeholder="Search your youtube videos here"
              type="text"
/>,
            <button
              className="search-button"
>
              Search
</button>,
          ],
          "className": "search-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "id": "input-bar",
              "onChange": [Function],
              "placeholder": "Search your youtube videos here",
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Search",
              "className": "search-button",
            },
            "ref": null,
            "rendered": "Search",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SearchBar Component should render without any data defined 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchBar
    loadAllData={[Function]}
    searchTerm=""
    setSearchTerm={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <form
        className="search-form"
        onSubmit={[Function]}
>
        <input
                id="input-bar"
                onChange={[Function]}
                placeholder="Search your youtube videos here"
                type="text"
        />
        <button
                className="search-button"
        >
                Search
        </button>
</form>,
      "id": "search-bar",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            id="input-bar"
            onChange={[Function]}
            placeholder="Search your youtube videos here"
            type="text"
/>,
          <button
            className="search-button"
>
            Search
</button>,
        ],
        "className": "search-form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "id": "input-bar",
            "onChange": [Function],
            "placeholder": "Search your youtube videos here",
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Search",
            "className": "search-button",
          },
          "ref": null,
          "rendered": "Search",
          "type": "button",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <form
          className="search-form"
          onSubmit={[Function]}
>
          <input
                    id="input-bar"
                    onChange={[Function]}
                    placeholder="Search your youtube videos here"
                    type="text"
          />
          <button
                    className="search-button"
          >
                    Search
          </button>
</form>,
        "id": "search-bar",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              id="input-bar"
              onChange={[Function]}
              placeholder="Search your youtube videos here"
              type="text"
/>,
            <button
              className="search-button"
>
              Search
</button>,
          ],
          "className": "search-form",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "id": "input-bar",
              "onChange": [Function],
              "placeholder": "Search your youtube videos here",
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Search",
              "className": "search-button",
            },
            "ref": null,
            "rendered": "Search",
            "type": "button",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
